# patracts

./: Cargo.toml  README.md
.github/workflows/: build.yml
core-primitives/: Cargo.toml
core-primitives/src/: lib.rs
pallets/contracts/: Cargo.toml
pallets/contracts/common/: Cargo.toml
pallets/contracts/common/src/: lib.rs
pallets/contracts/proc-macro/src/: lib.rs
pallets/contracts/rpc/: Cargo.toml
pallets/contracts/rpc/runtime-api/: Cargo.toml
pallets/contracts/rpc/runtime-api/src/: lib.rs
pallets/contracts/rpc/src/: lib.rs
pallets/contracts/src/: chain_extension.rs  deposit.rs  deposit_tests.rs  exec.rs  gas.rs  lib.rs  migration.rs  rent.rs  schedule.rs  storage.rs  tests.rs  weights.rs
pallets/contracts/src/benchmarking/: code.rs  mod.rs  sandbox.rs
pallets/contracts/src/wasm/: code_cache.rs  mod.rs  prepare.rs  runtime.rs
pallets/contracts/src/wasm/env_def/: macros.rs  mod.rs
runtime/common/: Cargo.toml
runtime/common/src/: constants.rs  lib.rs
runtime/dev/: Cargo.toml
runtime/dev/src/: constants.rs  lib.rs
runtime/patracts/: Cargo.toml
runtime/patracts/src/: lib.rs
