[package]
name = "common-runtime"
version = "0.1.0"
authors = ["patract labs <https://github.com/patractlabs>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
smallvec = "1.4.1"
static_assertions = "1.1.0"
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

frame-system = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-support = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-transaction-payment = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

core-primitives = { path = "../../core-primitives", default-features = false }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime/std",
    "frame-system/std",
    "frame-support/std",
    "pallet-transaction-payment/std",

    "core-primitives/std",
]
